[tool.poetry]
name = "hidapitester-gui"
version = "0.1.0"
description = ""
authors = ["kuznetsov-m"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
